    * Conary now restarts itself after updating critical conary components
      (currently, that consists of conary).  Hooks have been added for
      other components using the conary api to specify other troves as
      critical.  Also, hooks have been added for other components to specify
      a trove to update last. (CNY-805, CNY-808)

  o Bug Fixes:
    * Conary commands do not perform an unnecessary database checks on the
      local system. (CNY-571)
    * Fixed a bug that could allow conary to consider a noop update as an
      install (and could result in tracebacks in some situations). (CNY-845)
    * If you've made a local modification to a package and then try to
      downgrade it later, conary will downgrade included components as well.
      (CNY-805)
    * The error message produced by "cvc cook" when a source component
      exists on multiple branches with the same trailing label has
      been improved. (CNY-714)
    * Error handling when manipulating entitlements via XML-RPC has
      been improved. (CNY-692)

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).
    * Files moving between components as part of a single job are now
      treated as file updates instead of separate add/remove events.
      (CNY-750, CNY-786, CNY-359)

  o Client Changes:
    * The source component is now displayed in "conary rq --info"
      output.
    * Entitlements can now be passed into ConaryClient and
      NetworkRepositoryClient objects directly. (CNY-640)
    * Exceptions raised in callback functions are now issued as